# Telethon-To-Pyrogram

./: .gitignore  LICENSE.md  Makefile  README.md  convertor.py  pyproject.toml
pyrogram/: test_pyro_client.py
telethon/: test_tele_client.py
utils/: args.py  test_pyro_client.py  test_tele_client.py
